--- a/DAY-2/calculator.html
+++ b/DAY-2/calculator.html
@@ -134,20 +134,20 @@
 <body>
     no.1: <input type="text" placeholder="enter a no.1" id="txt1"><br>
     no.2: <input type="text" placeholder="enter a no.2" id="txt2"><br><br><br>
-    <!-- <input value="add" onclick="myData()" type="button">
-    <input value="sub" onclick="myData1()" type="button">
+    <input value="add" onclick="myData()" type="button">
+    <!-- <input value="sub" onclick="myData1()" type="button">
     <input value="multi" onclick="myData2()" type="button">
-    <input value="divide" onclick="myData3()" type="button">
-     <p id="ans"></p> -->
+    <input value="divide" onclick="myData3()" type="button"> -->
+     <p id="ans"></p>
     <br><br>
-    <select id="operation" onchange="myData4()">
+    <!-- <select id="operation" onchange="myData4()">
         <option value="">select an operation</option>
         <option value="+" >addition</option>
         <option value="-" >sutraction</option>
         <option value="*" >multiplication</option>
         <option value="/" >division</option>
         
-    </select>
+    </select> -->
     <p id="ans"></p>
 </body>
 </html>
